# Automatic-Unpaired-Shape-Deformation-Transfer

./: LICENSE  README.md
ACAP_linux/: CMakeLists.txt  install_ACAP.sh  install_CoMISo.sh  install_OpenMesh.sh  install_gmm.sh  main.cpp  readme.md
ACAP_linux/3rd/CoMISo/: CMakeLists.txt
ACAP_linux/3rd/CoMISo/Base/Code/: CodeLink.hh  Quality.hh
ACAP_linux/3rd/CoMISo/Base/Config/: BaseDefines.hh
ACAP_linux/3rd/CoMISo/Base/Debug/: DebCallStack.cc  DebCallStack.hh  DebConfig.cc  DebConfig.hh  DebDefault.hh  DebError.hh  DebFile.cc  DebFile.hh  DebFileOut.cc  DebFileOut.hh  DebOut.hh  DebStream.cc  DebTime.hh  DebUtils.hh
ACAP_linux/3rd/CoMISo/Base/Progress/: ProgressNode.cc  ProgressNode.hh
ACAP_linux/3rd/CoMISo/Base/Security/: Mandatory.hh  banned.h
ACAP_linux/3rd/CoMISo/Base/Test/: Checksum.cc  Checksum.hh  ChecksumCondition.cc  ChecksumCondition.hh  ChecksumDebugEvent.cc  ChecksumDebugEvent.hh  ChecksumFile.cc  ChecksumFile.hh  ChecksumNumberT.hh  TestResult.hh  types.hh
ACAP_linux/3rd/CoMISo/Base/Utils/: BaseError.cc  BaseError.hh  BaseErrorInc.hh  Environment.cc  Environment.hh  Exception.hh  IOutputStream.cc  IOutputStream.hh  OStringStream.cc  OStringStream.hh  StopWatch.cc  StopWatch.hh  Thread.hh  ThrowError.hh
ACAP_linux/3rd/CoMISo/CI/: Windows.bat  ci-linux.sh  ci-mac.sh
ACAP_linux/3rd/CoMISo/Config/: CoMISoDefines.hh  GmmTypes.hh  StdTypes.hh  config.hh.in
ACAP_linux/3rd/CoMISo/EigenSolver/: ArpackSolver.hh  EigenArpackMatrixT.hh
ACAP_linux/3rd/CoMISo/Examples/factored_solver/: main.cc
ACAP_linux/3rd/CoMISo/Examples/quadratic_solver/: main.cc
ACAP_linux/3rd/CoMISo/Examples/small_AQP/: CMakeLists.txt  main.cc
ACAP_linux/3rd/CoMISo/Examples/small_cplex_soc/: main.cc
ACAP_linux/3rd/CoMISo/Examples/small_factored_example/: main.cc
ACAP_linux/3rd/CoMISo/Examples/small_finite_element/: main.cc
ACAP_linux/3rd/CoMISo/Examples/small_nleast_squares/: main.cc
ACAP_linux/3rd/CoMISo/Examples/small_nsolver/: main.cc
ACAP_linux/3rd/CoMISo/Examples/small_quadratic_example/: main.cc
ACAP_linux/3rd/CoMISo/Examples/small_quadratic_resolve_example/: main.cc
ACAP_linux/3rd/CoMISo/Examples/small_sparseqr/: main.cc
ACAP_linux/3rd/CoMISo/NSolver/: AcceleratedQuadraticProxy.hh  BoundConstraint.cc  BoundConstraint.hh  CBCSolver.cc  CBCSolver.hh  COMISOSolver.cc  COMISOSolver.hh  CPLEXSolver.cc  CPLEXSolver.hh  CombinedProblem.cc  CombinedProblem.hh  ConeConstraint.cc  ConeConstraint.hh  ConstraintTools.cc  ConstraintTools.hh  DOCloudCache.cc  DOCloudCache.hh  DOCloudConfig.hh  DOCloudJob.cc  DOCloudJob.hh  DOCloudSolver.cc  DOCloudSolver.hh  FiniteElementLogBarrier.hh  FiniteElementProblem.cc  FiniteElementProblem.hh  GUROBISolver.cc  GUROBISolver.hh  IPOPTSolver.cc  IPOPTSolver.hh  IPOPTSolverLean.cc  IPOPTSolverLean.hh  LeastSquaresProblem.cc  LeastSquaresProblem.hh  LinearConstraint.cc  LinearConstraint.hh  LinearConstraintConverter.hh  LinearConstraintHandlerElimination.hh  LinearConstraintHandlerPenalty.cc  LinearConstraintHandlerPenalty.hh  LinearProblem.cc  (+21 more)
ACAP_linux/3rd/CoMISo/OpenFlipper-Plugin-Examples/Plugin-HarmonicExample/: CHANGELOG  CMakeLists.txt  ColorCoder.hh  HarmonicExamplePerObjectDataT.hh  HarmonicExamplePlugin.cc  HarmonicExamplePlugin.hh  HarmonicExampleT.cc  HarmonicExampleT.hh  HarmonicExampleToolbar.hh  HarmonicExampleToolbarBase.ui  Plugin-HarmonicExample.pro  open_cylinder.off
ACAP_linux/3rd/CoMISo/Solver/: CholmodSolver.cc  CholmodSolver.hh  CholmodSolverT.cc  ConstrainedSolver.cc  ConstrainedSolver.hh  ConstrainedSolverT.cc  EigenLDLTSolver.cc  EigenLDLTSolver.hh  EigenLDLTSolverT.cc  Eigen_Tools.cc  Eigen_Tools.hh  Eigen_ToolsT.cc  GMM_Tools.cc  GMM_Tools.hh  GMM_ToolsT.cc  IterativeSolver.cc  IterativeSolverT.cc  IterativeSolverT.hh  MISolver.cc  MISolver.hh  MISolverT.cc  SparseQRSolver.cc  SparseQRSolver.hh  SparseQRSolverT.cc  UMFPACKSolver.cc  UMFPACKSolver.hh  UMFPACKSolverT.cc
ACAP_linux/3rd/CoMISo/Utils/: CoMISoError.cc  CoMISoError.hh  CoMISoErrorInc.hh  MutablePriorityQueueT.hh  StopWatch.hh  Tools.hh  VSToolsT.hh
ACAP_linux/3rd/CoMISo/cmake/: ACGCommon.cmake  CGAL_GeneratorSpecificSettings.cmake  CoMISoExample.cmake  FindBLAS.cmake  FindCBC.cmake  FindCGAL.cmake  FindCGL.cmake  FindCLP.cmake  FindCOINUTILS.cmake  FindCoMISo.cmake  FindGMM.cmake  FindGUROBI.cmake  FindGUROBI.cmake~  FindIPOPT.cmake  FindLAPACK.cmake  FindMETIS.cmake  FindMOSEK.cmake  FindMPFR.cmake  FindMUMPS.cmake  FindOSI.cmake  FindSPECTRA.cmake  FindSUITESPARSE.cmake
ACAP_linux/3rd/OpenMesh/: CHANGELOG.md  CMakeLists.txt  README.md  VERSION
ACAP_linux/3rd/OpenMesh/Doc/: changelog.docu  doxy.config.in  mainpage.docu  mesh.docu  misc.docu  tools.docu  tutorial_08.docu
ACAP_linux/3rd/OpenMesh/Doc/Concepts/: MeshItems.hh  MeshKernel.hh
ACAP_linux/3rd/OpenMesh/Documentation/: a00002_source.html  a00014_source.html  a00029_source.html  a00041_source.html  a00047_source.html  a00065_source.html  a00134_source.html  a00140_source.html  a00143_source.html  a00149_source.html  a00152_source.html  a00155.html  a00155.js  a00155_source.html  a00156.map  a00156.md5  a00157.map  a00157.md5  a00158_source.html  a00161_source.html  a00164_source.html  a00170_source.html  a00173_source.html  a00176_source.html  a00179_source.html  a00182_source.html  a00185_source.html  a00191_source.html  a00194_source.html  a00197_source.html  a00203_source.html  a00209_source.html  a00215_source.html  a00221_source.html  a00227_source.html  a00233_source.html  a00239_source.html  a00245_source.html  a00248_source.html  a00251_source.html  (+2187 more)
ACAP_linux/3rd/OpenMesh/Documentation/search/: all_0.js  all_1.js  all_10.js  all_11.js  (+149 more)
ACAP_linux/3rd/OpenMesh/cmake/: ACGCommon.cmake  ACGCompiler.cmake  FindGLEW.cmake  FindGLUT.cmake  FindGoogleTest.cmake  FindOpenMesh.cmake  fixbundle.cmake.in
ACAP_linux/src/: Align.cpp  Align.h  FeatureVector.cpp  FeatureVector.h  SolveOpt.cpp  SolveOpt.h  fileSystemUtility.cpp  fileSystemUtility.h  natsort.cpp  natsort.hpp  new_ARAPDeform.cpp  new_ARAPDeform.h
ACAP_linux/test/: LOGRNEW_GT.txt  LOGRNEW_withopt_GT.txt  S_GT.txt
(+187 files in other folders)
